1999-03-17  Tim Jenness  <timj@jach.hawaii.edu>

	* SCUBA/_REDUCE_SKYDIP_: Use filter name as key for changing
	T_COLD, eta_tel. Store model name in Frame object temporarily so
	that the model is removed by the end of recipe tidyup.

1999-03-06  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* SCUBA/_REBIN_FRAME_: Add check for PL and allow output coordinate 
	frame to be specified.

	* SCUBA/_CENTROID_FRAME_: Add index writing ability

1998-02-25  Frossie  <frossie@jach.hawaii.edu>

	* _MAKE_MOSAIC_: use Getopt variable

	* _MAKE_FLAT_: use Getopt variable

	* _DISPLAY_IMAGE_: use Getopt variable

1998-02-23  Frossie  <frossie@jach.hawaii.edu>

	* _SUBTRACT_DARK_: new namespace

	* _STD_PHOTEX_HELLO_: new namespace

	* _REMOVE_BIAS_: new namespace

	* _MOSAIC_GROUP_: new namespace

	* _MASK_BAD_PIXELS_: new namespace

	* _MAKE_MOSAIC_: new namespace
