@@ -1,5 +1,7 @@
 1999-03-17  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* SCUBA/_CENTROID_FRAME_: Use ORAC::LogFile rather than Index file
+
 	* SCUBA/_REDUCE_SKYDIP_: Use filter name as key for changing
 	T_COLD, eta_tel. Store model name in Frame object temporarily so
 	that the model is removed by the end of recipe tidyup.
